--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 SetEnv PHP_VER 5
 DirectoryIndex first.html index.htm index.html index.php /accueil/index.php
-<Files accueil/titre.txt acceuil/contenu.txt>
+<Files accueil/titre.txt>
 deny from all
 </Files>
